added new types of notification and fixed some unit tests